<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            android:title="@string/episode_detail"
            app:navigationIcon="@drawable/ic_arrow_back"
             />


            <TextView
            android:id="@+id/textViewEpisodeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episode_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textViewEpisodeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonPlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textViewEpisodeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_description"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>