<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp">

    <!-- Search Field -->
    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_podcasts"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
        app:layout_constraintWidth_percent="0.7"
        android:layout_margin="8dp"/>

    <!-- Search Button -->
    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintTop_toTopOf="@id/editTextSearch"
        app:layout_constraintBottom_toBottomOf="@id/editTextSearch"
        app:layout_constraintStart_toEndOf="@id/editTextSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/buttonSubscriptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscriptions"
        app:layout_constraintTop_toBottomOf="@id/editTextSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/buttonSubscriptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>